parser-chilero-antlr/target/generated-sources/antlr4/gt/edu/usac/compiler/CoolGramaticaParser.java
// Generated from gt/edu/usac/compiler/CoolGramatica.g4 by ANTLR 4.10.1
package gt.edu.usac.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolGramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, ELSE=2, FI=3, IF=4, IN=5, INHERITS=6, ISVOID=7, LET=8, LOOP=9, 
		POOL=10, THEN=11, WHILE=12, CASE=13, ESAC=14, NEW=15, OF=16, NOT=17, LBRACE=18, 
		RBRACE=19, LPAREN=20, RPAREN=21, COLON=22, SEMI=23, COMMA=24, DOT=25, 
		AT=26, NEG=27, EQ=28, MULT=29, DIV=30, PLUS=31, MINUS=32, LT=33, ASSIGN=34, 
		DARROW=35, LE=36, TYPEID=37, OBJECTID=38, TRUE=39, FALSE=40, BOOL_CONST=41, 
		INT_CONST=42, STR_CONST=43, ESPACIOBLANCO=44, COMENTARIO_LINEA=45, COMENTARIO_MULTILINEA=46, 
		ERROR=47;
	public static final int
		RULE_sintactico = 0, RULE_clase = 1, RULE_contenido_clase = 2, RULE_parametro = 3, 
		RULE_expresion = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"sintactico", "clase", "contenido_clase", "parametro", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'{'", "'}'", "'('", "')'", "':'", 
			"';'", "','", "'.'", "'@'", "'~'", "'='", "'*'", "'/'", "'+'", "'-'", 
			"'<'", "'<-'", "'=>'", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", 
			"LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", "SEMI", "COMMA", "DOT", 
			"AT", "NEG", "EQ", "MULT", "DIV", "PLUS", "MINUS", "LT", "ASSIGN", "DARROW", 
			"LE", "TYPEID", "OBJECTID", "TRUE", "FALSE", "BOOL_CONST", "INT_CONST", 
			"STR_CONST", "ESPACIOBLANCO", "COMENTARIO_LINEA", "COMENTARIO_MULTILINEA", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoolGramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    StringBuffer string_buff = new StringBuffer();

	public CoolGramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SintacticoContext extends ParserRuleContext {
		public SintacticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sintactico; }
	 
		public SintacticoContext() { }
		public void copyFrom(SintacticoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RepeticionClaseContext extends SintacticoContext {
		public List<ClaseContext> clase() {
			return getRuleContexts(ClaseContext.class);
		}
		public ClaseContext clase(int i) {
			return getRuleContext(ClaseContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CoolGramaticaParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CoolGramaticaParser.SEMI, i);
		}
		public RepeticionClaseContext(SintacticoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterRepeticionClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitRepeticionClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitRepeticionClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SintacticoContext sintactico() throws RecognitionException {
		SintacticoContext _localctx = new SintacticoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sintactico);
		int _la;
		try {
			_localctx = new RepeticionClaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(13); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(10);
				clase();
				setState(11);
				match(SEMI);
				}
				}
				setState(15); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClaseContext extends ParserRuleContext {
		public ClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase; }
	 
		public ClaseContext() { }
		public void copyFrom(ClaseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinirClaseContext extends ClaseContext {
		public TerminalNode CLASS() { return getToken(CoolGramaticaParser.CLASS, 0); }
		public List<TerminalNode> TYPEID() { return getTokens(CoolGramaticaParser.TYPEID); }
		public TerminalNode TYPEID(int i) {
			return getToken(CoolGramaticaParser.TYPEID, i);
		}
		public TerminalNode LBRACE() { return getToken(CoolGramaticaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CoolGramaticaParser.RBRACE, 0); }
		public TerminalNode INHERITS() { return getToken(CoolGramaticaParser.INHERITS, 0); }
		public List<Contenido_claseContext> contenido_clase() {
			return getRuleContexts(Contenido_claseContext.class);
		}
		public Contenido_claseContext contenido_clase(int i) {
			return getRuleContext(Contenido_claseContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CoolGramaticaParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CoolGramaticaParser.SEMI, i);
		}
		public DefinirClaseContext(ClaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterDefinirClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitDefinirClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitDefinirClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaseContext clase() throws RecognitionException {
		ClaseContext _localctx = new ClaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clase);
		int _la;
		try {
			_localctx = new DefinirClaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(17);
			match(CLASS);
			setState(18);
			match(TYPEID);
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(19);
				match(INHERITS);
				setState(20);
				match(TYPEID);
				}
			}

			setState(23);
			match(LBRACE);
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OBJECTID) {
				{
				{
				setState(24);
				contenido_clase();
				setState(25);
				match(SEMI);
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contenido_claseContext extends ParserRuleContext {
		public Contenido_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido_clase; }
	 
		public Contenido_claseContext() { }
		public void copyFrom(Contenido_claseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableCLaseContext extends Contenido_claseContext {
		public TerminalNode OBJECTID() { return getToken(CoolGramaticaParser.OBJECTID, 0); }
		public TerminalNode COLON() { return getToken(CoolGramaticaParser.COLON, 0); }
		public TerminalNode TYPEID() { return getToken(CoolGramaticaParser.TYPEID, 0); }
		public TerminalNode ASSIGN() { return getToken(CoolGramaticaParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public VariableCLaseContext(Contenido_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterVariableCLase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitVariableCLase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitVariableCLase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MetodoClaseContext extends Contenido_claseContext {
		public TerminalNode OBJECTID() { return getToken(CoolGramaticaParser.OBJECTID, 0); }
		public TerminalNode LPAREN() { return getToken(CoolGramaticaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CoolGramaticaParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(CoolGramaticaParser.COLON, 0); }
		public TerminalNode TYPEID() { return getToken(CoolGramaticaParser.TYPEID, 0); }
		public TerminalNode LBRACE() { return getToken(CoolGramaticaParser.LBRACE, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CoolGramaticaParser.RBRACE, 0); }
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolGramaticaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolGramaticaParser.COMMA, i);
		}
		public MetodoClaseContext(Contenido_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterMetodoClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitMetodoClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitMetodoClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Contenido_claseContext contenido_clase() throws RecognitionException {
		Contenido_claseContext _localctx = new Contenido_claseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_contenido_clase);
		int _la;
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new MetodoClaseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(OBJECTID);
				setState(35);
				match(LPAREN);
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OBJECTID) {
					{
					setState(36);
					parametro();
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(37);
						match(COMMA);
						setState(38);
						parametro();
						}
						}
						setState(43);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(46);
				match(RPAREN);
				setState(47);
				match(COLON);
				setState(48);
				match(TYPEID);
				setState(49);
				match(LBRACE);
				setState(50);
				expresion(0);
				setState(51);
				match(RBRACE);
				}
				break;
			case 2:
				_localctx = new VariableCLaseContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(OBJECTID);
				setState(54);
				match(COLON);
				setState(55);
				match(TYPEID);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(56);
					match(ASSIGN);
					setState(57);
					expresion(0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	 
		public ParametroContext() { }
		public void copyFrom(ParametroContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParametroClaseContext extends ParametroContext {
		public TerminalNode OBJECTID() { return getToken(CoolGramaticaParser.OBJECTID, 0); }
		public TerminalNode COLON() { return getToken(CoolGramaticaParser.COLON, 0); }
		public TerminalNode TYPEID() { return getToken(CoolGramaticaParser.TYPEID, 0); }
		public ParametroClaseContext(ParametroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterParametroClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitParametroClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitParametroClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametro);
		try {
			_localctx = new ParametroClaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(OBJECTID);
			setState(63);
			match(COLON);
			setState(64);
			match(TYPEID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
	 
		public ExpresionContext() { }
		public void copyFrom(ExpresionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CaseExpresionContext extends ExpresionContext {
		public TerminalNode CASE() { return getToken(CoolGramaticaParser.CASE, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode OF() { return getToken(CoolGramaticaParser.OF, 0); }
		public TerminalNode ESAC() { return getToken(CoolGramaticaParser.ESAC, 0); }
		public List<TerminalNode> OBJECTID() { return getTokens(CoolGramaticaParser.OBJECTID); }
		public TerminalNode OBJECTID(int i) {
			return getToken(CoolGramaticaParser.OBJECTID, i);
		}
		public List<TerminalNode> COLON() { return getTokens(CoolGramaticaParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(CoolGramaticaParser.COLON, i);
		}
		public List<TerminalNode> TYPEID() { return getTokens(CoolGramaticaParser.TYPEID); }
		public TerminalNode TYPEID(int i) {
			return getToken(CoolGramaticaParser.TYPEID, i);
		}
		public List<TerminalNode> DARROW() { return getTokens(CoolGramaticaParser.DARROW); }
		public TerminalNode DARROW(int i) {
			return getToken(CoolGramaticaParser.DARROW, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CoolGramaticaParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CoolGramaticaParser.SEMI, i);
		}
		public CaseExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterCaseExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitCaseExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitCaseExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DispatchDiExpresionContext extends ExpresionContext {
		public TerminalNode OBJECTID() { return getToken(CoolGramaticaParser.OBJECTID, 0); }
		public TerminalNode LPAREN() { return getToken(CoolGramaticaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CoolGramaticaParser.RPAREN, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolGramaticaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolGramaticaParser.COMMA, i);
		}
		public DispatchDiExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterDispatchDiExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitDispatchDiExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitDispatchDiExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusMinusExpresionContext extends ExpresionContext {
		public Token op;
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(CoolGramaticaParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(CoolGramaticaParser.MINUS, 0); }
		public PlusMinusExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterPlusMinusExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitPlusMinusExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitPlusMinusExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BloqueExpresionContext extends ExpresionContext {
		public TerminalNode LBRACE() { return getToken(CoolGramaticaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CoolGramaticaParser.RBRACE, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CoolGramaticaParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CoolGramaticaParser.SEMI, i);
		}
		public BloqueExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterBloqueExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitBloqueExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitBloqueExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsvoidExpresionContext extends ExpresionContext {
		public TerminalNode ISVOID() { return getToken(CoolGramaticaParser.ISVOID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public IsvoidExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).enterIsvoidExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolGramaticaListener ) ((CoolGramaticaListener)listener).exitIsvoidExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolGramaticaVisitor ) return ((CoolGramaticaVisitor<? extends T>)visitor).visitIsvoidExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NuevoTipoExpresionContext extends ExpresionContext {
		public TerminalNode NEW() { return getToken(CoolGramaticaParser.NEW, 0); }
		public TerminalNode TYPEID() { return getToken(CoolGramaticaParser.TYPEID, 0); }
		public NuevoTipoExpresionContext(ExpresionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
